upload new duckieboat model.  duckiepond_gazebo duckiepond_new.launch

--- a/catkin_ws/src/duckiepond_vehicle/package.xml
+++ b/catkin_ws/src/duckiepond_vehicle/package.xml
@@ -26,6 +26,7 @@
   
   <export>
     <!-- Other tools can request additional information be placed here -->
+    <gazebo_ros gazebo_media_path="${prefix}/media"/> 
 
   </export>
 </package>
